# cosmicpython

./: .python-version  docker-compose.yaml  pyproject.toml
src/allocation/: config.py
src/allocation/adapters/: db_tables.py  repository.py
src/allocation/domain/: model.py
src/allocation/entrypoints/: flask_app.py
src/allocation/service_layer/: services.py  unit_of_work.py
src/batches/: config.py
src/batches/adapters/: db_tables.py  repository.py
src/batches/domain/: model.py
src/batches/entrypoints/: flask_app.py
src/batches/service_layer/: services.py  unit_of_work.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api.py
tests/integration/: test_repository.py  test_uow.py
tests/integration_tests/: conftest.py  test_repository.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
tests/unit-tests/: test_batches.py
