[tool.poetry]
name = "cosmicpython"
version = "0.1.0"
description = ""
authors = ["Vladislav <vladislav.vorobyov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
requests = "^2.27.1"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
